Font size + few text change

--- a/_sass/minimal-mistakes.scss
+++ b/_sass/minimal-mistakes.scss
@@ -39,6 +39,7 @@
 @import "minimal-mistakes/sidebar";
 @import "minimal-mistakes/print";
 
+/* Manually added for a wider layout (right side) */
 .wide2 {
   .page {
     float: left;
